Fix remaining compiler errors, commented out code that is unused/broken.